fix(responsive): remove unexpected left margin on small screens

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -209,4 +209,7 @@ body {
     .app-sidebar {
         display: none !important;
     }
+    .app-main {
+        margin-left: 0 !important;
+    }
 }
